syntax = "proto3";
package net.topaz.grpc;

option java_multiple_files = true;
option java_package = "net.topaz.protobuf";
option java_outer_classname = "PubSubProto";



message AnyHeader {
    string key = 1;
    bytes value = 2;
}

/*
 * Created by a publisher.
 */
message ProducerEvent {
    string id = 1;
    bytes payload = 2;
    repeated AnyHeader headers = 3;
}

message PublishRequest {
    string topic = 1;
    repeated ProducerEvent events = 2;
}

message PublishResult {
    bool succeeded = 1;
    string correlationId = 2;
}

message PublishResponse {
    repeated PublishResult results = 1;
}

/*
 * Consumed by a subscriber.
 */
message ConsumerEvent {
    string topic = 1;
    ProducerEvent event = 2;
}

message SubscribeRequest {
    repeated string topics = 1;
}

message SubscribeResponse {
    repeated ConsumerEvent events = 1;
}


/*
 * Topaz pub-sub service API.
 */
service PubSub {

    rpc publish(PublishRequest) returns (PublishResponse) {}

    rpc publishStream(stream PublishRequest) returns (stream PublishResponse) {}

    rpc subscribe(SubscribeRequest) returns (stream SubscribeResponse) {}

    rpc unsubscribe(SubscribeRequest) returns (SubscribeResponse) {}
}

